<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/activity_add_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_label"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/activity_add_location_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_label" />
    </android.support.design.widget.TextInputLayout>

    <fragment
        android:id="@+id/add_location_activity_place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_add_location_from_date"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/from_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/activity_add_location_from_time"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/from_time"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_add_location_to_date"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/to_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/activity_add_location_to_time"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/to_time" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_add_location_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

    <Button
        android:id="@+id/activity_add_location_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

</LinearLayout>

