<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    android:background="@drawable/map_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/smoke_background"
        tools:context="io.hobaskos.event.eventapp.ui.about.AboutActivity"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:showIn="@layout/activity_about">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/round_logo"
            android:paddingTop="32dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:paddingTop="@dimen/text_margin"
            android:textSize="32sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:paddingTop="@dimen/text_margin"
            android:textStyle="italic"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:padding="@dimen/text_margin"
            />

    </LinearLayout>

</ScrollView>
