<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- LOCATION -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/locationLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:id="@+id/locationTextView"
                android:labelFor="@+id/locationAutoCompleteTextView"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/locationTextView"
                android:background="@color/divider"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/gpsLayout"
                android:layout_below="@+id/locationTextView">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/use_current_location" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/fragment_filter_events_gps_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/placesLayout"
                android:layout_below="@+id/gpsLayout">

                <!-- AUTOCOMPLETE PLACES -->
                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                    />
            </LinearLayout>
        </RelativeLayout>

        <!-- DISTANCE -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/distanceLayout"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:id="@+id/distanceTextView" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/distanceTextView"
                android:background="@color/divider"
                />

            <LinearLayout
                android:id="@+id/selectedDistanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distanceTextView"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_distance"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:id="@+id/selctedDistanceLabelTextView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:id="@+id/selctedDistanceTextView"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/distanceTextViews"
                android:layout_below="@+id/selectedDistanceLayout">

                <TextView
                    android:id="@+id/minimumDistanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/maxDistanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/seekBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/seekBar"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:progress="1"
                android:id="@+id/seekBar"
                android:layout_below="@+id/distanceTextViews"/>
        </RelativeLayout>

        <!-- CATEGORY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:id="@+id/categoryLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_category"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:id="@+id/categoryTextView" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:id="@+id/categorySpinner" />

        </LinearLayout>

        <!-- SUBMIT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/categoryLayout"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/apply_filters"
                android:background="@android:color/transparent"
                android:textColor="@color/colorBlueDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:id="@+id/applyFiltersButton"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>